# timeseries-basic

./: .envrc  .gitignore  README.md  main.py  pyproject.toml
notebooks/: p_02_stationarity.py  p_03_ec_sales_arima.py
scripts/: demand_01_eda.py  demand_02_baseline.py  demand_02_store_sales_baseline.py  demand_03_lgbm_cv.py  eda_ma_baseline.py  p_01_simple_ma.py  ts_01_moving_average.py  ts_02_stationarity_tests.py  ts_03_ec_sales_arima.py
src/: features.py  metrics.py  time_series_cv.py
tests/: test_features_basic.py  test_metrics_basic.py  test_smoke_launcher.py  test_time_series_cv.py
