[project]
name = "timeseries-basic"
version = "0.1.0"
description = "Time series forecasting basics (portfolio project)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
]
