[project]
name = "timeseries-basic"
version = "0.1.0"
description = "Time series forecasting basics (portfolio project)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "lightgbm>=4.6.0",
]

[dependency-groups]
dev = ["ipdb>=0.13.13", "jupytext>=1.19.1", "pytest>=9.0.2"]
