[project]
name = "timeseries-basic"
version = "0.1.0"
description = "Time series forecasting basics (portfolio project)"
readme = "README.md"
requires-python = "==3.11.*"


dependencies = [
    "ipykernel>=6.29.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "lightgbm>=4.3.0",
    "mlflow>=2.9.2",
]

[dependency-groups]
dev = ["ipdb>=0.13.13", "jupytext>=1.19.1", "pytest>=9.0.2"]

[tool.jupytext]
# notebooks_local/ の ipynb と scripts/ の py:percent をペアにする
formats = "notebooks_local///ipynb,scripts///py:percent"
